tests/errors/guard-overlap.fil
comp Main<G>(
  @interface[G, G+6] go_G: 1,
  @[G, G+3] in: 32,
  @[G, G+3] + @exact[G, G+2] g1: 1,
  @[G, G+3] + @exact[G+1, G+3] g2: 1,
) -> (
  @[G, G+3] out: 32
) {
  out = g1 | g2 ? in;
}
